--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 </header>
 <!-- SECTIONS -->
 <div class="sections">
-	I am a PhD candidate in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer Vision Lab</a> working with <a href="http://web.cs.hacettepe.edu.tr/~aykut/" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
+	I am a Group Lead at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a> and a PhD candidate in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer Vision Lab</a> working with <a href="http://web.cs.hacettepe.edu.tr/~aykut/" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
-      <li>2018: We're looking for two Sr. Full Stack Software Engineers to work on AI projects at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
+      <li>2019: Our paper on Detecting Cybersecurity Events from Noisy Short Text has been accepted at NAACL 2019. Pre-print coming soon!</li>
+      <li>2019: We're looking for two Sr. Full Stack Software Engineers to work on AI projects at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
+      <li>2019: I'll be a guest lecturer at TOBB University for BIL529 on Jan 26.</li>
       <li>2018: I'll be speaking at KTU about AI in Product Development on Dec 11.</li>
       <li>2018: I'll be a guest lecturer at Bilkent University for CS491 on Dec 10.</li>
       <li>2018: I'll be speaking at Konya Technical University about AI in Defence on Nov 6.</li>
@@ -108,6 +110,12 @@
    </ul>
    <br><span class="subsection" id="papers"><a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en" target="_blank">Papers</a></span>
    <ul class="bullet">
+	   <li><b>Detecting Cybersecurity Events from Noisy Short Text</b>
+	  <br><u>S. Yagcioglu</u>, M. S. Seyfioglu, B. Citamak, B. Bardak, S. Guldamlasioglu, A. Yuksel and E. I. Tatli
+	  <br>[NAACL19] [<a href="#" target="_self">pdf (coming soon!)</a>] [<a href="#" target="_self">project (coming soon!)</a>]
+	  <br><br>
+	</li>
+	  
 <li><b>RecipeQA: A Challenge Dataset for Multimodal Comprehension of Cooking Recipes</b>
   <br><u>S. Yagcioglu</u>, A. Erdem, E. Erdem, N. Ikizler-Cinbis
   <br>[EMNLP18] [<a href="https://arxiv.org/abs/1809.00812" target="_self">pdf</a>] [<a href="https://hucvl.github.io/recipeqa/" target="_self">project</a>]
