--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
    <ul class="bullet">
 	   <li><b>Detecting Cybersecurity Events from Noisy Short Text</b>
 	  <br><u>S. Yagcioglu</u>, M. S. Seyfioglu, B. Citamak, B. Bardak, S. Guldamlasioglu, A. Yuksel and E. I. Tatli
-	  <br>[NAACL19] [<a href="#" target="_self">pdf (coming soon!)</a>] [<a href="#" target="_self">project (coming soon!)</a>]
+	  <br>[NAACL19] [<a href="https://arxiv.org/pdf/1904.05054" target="_self">pdf</a>] [<a href="https://stmai.github.io/cydec/" target="_self">project</a>]
 	  <br><br>
 	</li>
 	  
