--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 </header>
 <!-- SECTIONS -->
 <div class="sections">
-	I am a Group Lead at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a> and a PhD candidate in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer Vision Lab</a> working with <a href="http://web.cs.hacettepe.edu.tr/~aykut/" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
+	I am a PhD candidate in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer Vision Lab</a> working with <a href="http://web.cs.hacettepe.edu.tr/~aykut/" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. Previously, I was a Group Lead at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
-      <li>2019: Our paper on Detecting Cybersecurity Events from Noisy Short Text has been accepted at NAACL 2019. Pre-print coming soon!</li>
+      <li>2019: Our paper on <a href="https://arxiv.org/abs/1904.05054" target="_self">Detecting Cybersecurity Events from Noisy Short Text</a> has been accepted at NAACL 2019.</li>
       <li>2019: We're looking for two Sr. Full Stack Software Engineers to work on AI projects at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
       <li>2019: I'll be a guest lecturer at TOBB University for BIL529 on Jan 26.</li>
       <li>2018: I'll be speaking at KTU about AI in Product Development on Dec 11.</li>
@@ -62,7 +62,7 @@
    I am interested in machine intelligence and how machines learn. Broadly, I do research in Computer Vision and Natural Language Processing. More specifically, I am interested in the following research areas.
    <ul class="bullet">
       <li>Reading Comprehension and Visual Reasoning</li>
-      <li>Deep Learning and its applications in Cybersecurity</li>
+      <li>Deep Learning and its applications</li>
    </ul>
    <br><!--<span class="subsection" id="projects"><a href="#projects" target="_self">Projects</a></span>--><!--<ul class="project"><li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.mits.eutrafcdss&amp;t=ZDc2ZDIyOWVjMzAwMTMxZTQ3NjA5YzM2MjlmNTIwYThkN2VmNjliMyxUbU4zdWpESg%3D%3D" target="_self">EUTRAF Clinical Decision Support System</a>--><!--<div class="project-detail">The EUTRAF CDSS application is a mobile Clinical Decision Support System to assess the risk of Ischemic Stroke and/or Thromboembolic Events in patients with Atrial Fibrillation.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fgithub.com%2Fjarvy%2Fjarvy&amp;t=Y2JhMGRhMjYxZjk1YzA5ZmEwMzI0ZTI3NzdkYzliZjJhZjgxMTJkMyxUbU4zdWpESg%3D%3D" target="_self">Jarvy: Python Intelligent Assistant for Humans</a>--><!--<div class="project-detail">Jarvy, aims to help humans by trying to understand them and figuring out best ways to respond to them. [<a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fgithub.com%2Fjarvy%2Fjarvy&amp;t=Y2JhMGRhMjYxZjk1YzA5ZmEwMzI0ZTI3NzdkYzliZjJhZjgxMTJkMyxUbU4zdWpESg%3D%3D" target="_self">GitHub Page</a>]</div>--><!--</li>--><!--<li><a href="http://semihyagcioglu.com/projects/image-captioning" target="_self">A Distributed Representation Based Query Expansion Approach for Image Captioning</a>--><!--<div class="project-detail">In this study our aim is to generate captions that describes images more accurately. [<a href="http://semihyagcioglu.com/projects/image-captioning" target="_self">Project Page</a>]</div>--><!--</li>--><!--<li><a href="http://semihyagcioglu.com/projects/image-geolocalization" target="_self">City Scale Image Geolocalization via Dense Scene Alignment</a>--><!--<div class="project-detail">In this project we proposed a novel coarse-to-fine strategy for image geolocalization that scales up well with very large datasets. [<a href="http://semihyagcioglu.com/projects/image-geolocalization" target="_self">Project Page</a>]</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.mits.ekardiyo%26hl%3Den&amp;t=OWVlY2QxODIwODhmYWRjYTlmNzU0ODRiOWJjYjcwNzkzMjE0NWYxMyxUbU4zdWpESg%3D%3D" target="_blank">Ekardiyo</a>--><!--<div class="project-detail">Mobile education app developed for cardiologists to enchance their continued education. Download on <a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fitunes.apple.com%2Ftr%2Fapp%2Fekardiyo%2Fid918112607%3Fmt%3D8&amp;t=NmU5YmQxNzQ3NjliNTBjMTk2NzQ2YWE1NDZhZmU4NTM2MmMwYmI0YSxUbU4zdWpESg%3D%3D" target="_blank">App Store</a> and <a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.mits.ekardiyo%26hl%3Den&amp;t=OWVlY2QxODIwODhmYWRjYTlmNzU0ODRiOWJjYjcwNzkzMjE0NWYxMyxUbU4zdWpESg%3D%3D" target="_blank">Google Play Store</a>.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fwww.eutraf.eu%2F&amp;t=ZjEzOTU5M2YwMzg1NWRhYmIyOWNlMTY0OGU2MjcyYzU2MjY2Y2VkMCxUbU4zdWpESg%3D%3D" target="_blank">EUTRAF Research Collaboration Platform</a>--><!--<div class="project-detail">Project was developed to facilitate the collaboration between the <a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fwww.eutraf.eu%2Fconsortium%2F&amp;t=M2JmMjBjNjI4NzQ3ZDkwNmNiYzMwN2VjZjY1NDgyZjQ3NDQ5N2E0YSxUbU4zdWpESg%3D%3D" target="_blank"> consortium members</a> in the <a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fwww.eutraf.eu%2F&amp;t=ZjEzOTU5M2YwMzg1NWRhYmIyOWNlMTY0OGU2MjcyYzU2MjY2Y2VkMCxUbU4zdWpESg%3D%3D" target="_blank">EUTRAF</a> project.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fmits.com.tr%2Fvime.html&amp;t=YWMxODZkYzNhMzllYmFmMzg4ZjllNTRiM2M0Y2MzNTU4ZTAyNzMwZSxUbU4zdWpESg%3D%3D" target="_blank">Virtual Medical Events</a>--><!--<div class="project-detail">Web based virtual education and conference platform developed specificially for Medical Doctors which is integrated with 20+ clients.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fdl.dropboxusercontent.com%2Fu%2F16169065%2Fhbpr.pdf&amp;t=NTMyMzA4NmEwZTlkMDhkMjVjMDQ4YzM4NWI2ODJjOTcyMWM3MjA4MixUbU4zdWpESg%3D%3D" target="_blank">Human Body Part Recognition</a>--><!--<div class="project-detail">The aim of the project was to detect human body parts from video frames using pictorial structures. [<a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fdl.dropboxusercontent.com%2Fu%2F16169065%2Fhbpr.pdf&amp;t=NTMyMzA4NmEwZTlkMDhkMjVjMDQ4YzM4NWI2ODJjOTcyMWM3MjA4MixUbU4zdWpESg%3D%3D" target="_blank">PDF</a>]</div>--><!--</li>--><!--</ul>--><!--<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody><tr><td width="20%"><a href="https://play.google.com/store/apps/details?id=com.mits.eutrafcdss" target="_self"><img alt="EUTRAF CDSS" src="https://lh3.googleusercontent.com/0hZLXRwcqciIuV6dBw1t7zVuJCAmdUX4bNVCxNmtG8oSxM0sdfQSEct-cMUOzzah2tU=w300-rw" width="100px"/></a></td><td valign="top" width="80%"><p><a href="https://play.google.com/store/apps/details?id=com.mits.eutrafcdss">
       The EUTRAF Clinical Decision Support System</a><br></p><p></p><p>A mobile Clinical Decision Support System to assess the risk of Ischemic Stroke and/or Thromboembolic Events in patients with Atrial Fibrillation.
@@ -84,7 +84,7 @@
       <li>
          <!-- Apr 2016  --><a href="https://medium.com/hucvl-stories/image-captioning-a-retrospect-on-our-latest-study-4e54a864159e" target="_self">Image Captioning: A Retrospect on Our Latest Study</a>
       </li>
-      <li>
+     <!-- <li>
          <a href="https://semihyagcioglu.tumblr.com/128125956027/doing-things" target="_self">Doing Things</a>
       </li>
       <li>
@@ -94,7 +94,7 @@
          <a href="https://semihyagcioglu.tumblr.com/70798815261/this-is-how-i-work" target="_self">This Is How I Work</a>
       </li>
       <li><a href="https://semihyagcioglu.tumblr.com/69678955624/on-finding-passion" target="_self">On Finding Passion</a></li>
-        
+        -->
    </ul>
    <br><span class="subsection" id="talks"><a href="#talks" target="_self">Talks</a></span><br>
    <ul class="bullet">
@@ -102,7 +102,7 @@
        <li><a href="#" target="_self">Machine Learning in the Wild</a></li>
        <li><a href="#" target="_self">Learning Algorithms</a></li>
        <li><a href="#" target="_self">How Machines Learn</a></li>
-       <li><a href="talks/teaching-machines-to-see" target="_self">Teaching Machines to Understand What They See</a></li>
+       <li><a href="#" target="_self">Teaching Machines to Understand What They See</a></li>
       <!--<li><a href="talks/build-your-thing-in-a-weekend" target="_self">Build Your Thing In A Weekend</a></li>-->
       <!--<li><a href="talk/an-unexpected-journey" target="_self">An Unexpected Journey</a></li>-->
       <!--<li><a href="/talks/i-can-but-i-wont" target="_self">I Can, But I Won't</a></li>-->
