--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
-      <li>2019: Our paper on <a href="https://arxiv.org/abs/1904.05054" target="_self">Detecting Cybersecurity Events from Noisy Short Text</a> has been accepted at NAACL 2019.</li>
+      <li>2019: <a href="https://arxiv.org/abs/1904.05054" target="_self">Our paper</a> on Detecting Cybersecurity Events from Noisy Short Text has been accepted at NAACL 2019.</li>
       <li>2019: We're looking for two Sr. Full Stack Software Engineers to work on AI projects at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
       <li>2019: I'll be a guest lecturer at TOBB University for BIL529 on Jan 26.</li>
       <li>2018: I'll be speaking at KTU about AI in Product Development on Dec 11.</li>
