--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
    </ul>
    <br><span class="subsection" id="talks"><a href="#talks" target="_self">Talks</a></span><br>
    <ul class="bullet">
-       <li><a href="#" target="_self">AI in Product Development</a></li>
-       <li><a href="#" target="_self">Machine Learning in the Wild</a></li>
-       <li><a href="#" target="_self">Learning Algorithms</a></li>
-       <li><a href="#" target="_self">How Machines Learn</a></li>
-       <li><a href="#" target="_self">Teaching Machines to Understand What They See</a></li>
+       <li>AI in Cybersecurity, TOBB ETU</li>  
+       <li>AI in Product Development, Karadeniz Technical University</li>
+       <li>Machine Learning in the Wild, CS491 at Bilkent University</li>
+       <li>Learning Algorithms, METU</li>
+       <li>How Machines Learn, AI and ML Meetup</li>
+       <li>Teaching Machines to Understand What They See, PyData Istanbul</li>
       <!--<li><a href="talks/build-your-thing-in-a-weekend" target="_self">Build Your Thing In A Weekend</a></li>-->
       <!--<li><a href="talk/an-unexpected-journey" target="_self">An Unexpected Journey</a></li>-->
       <!--<li><a href="/talks/i-can-but-i-wont" target="_self">I Can, But I Won't</a></li>-->
@@ -110,6 +111,12 @@
    </ul>
    <br><span class="subsection" id="papers"><a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en" target="_blank">Papers</a></span>
    <ul class="bullet">
+	   
+	   <li><b>Procedural Reasoning Networks for Understanding Multimodal Procedures</b>
+<br>Mustafa Sercan Amac, <u>Semih Yagcioglu</u>, Aykut Erdem, and Erkut Erdem
+<br>[CoNLL19] [<a href="https://arxiv.org/pdf/1909.08859" target="_self">pdf</a>] [<a href="https://hucvl.github.io/prn/" target="_self">project</a>]
+	  <br><br>
+	   
 	   <li><b>Detecting Cybersecurity Events from Noisy Short Text</b>
 	  <br><u>S. Yagcioglu</u>, M. S. Seyfioglu, B. Citamak, B. Bardak, S. Guldamlasioglu, A. Yuksel and E. I. Tatli
 	  <br>[NAACL19] [<a href="https://arxiv.org/pdf/1904.05054" target="_self">pdf</a>] [<a href="https://stmai.github.io/cydec/" target="_self">project</a>]
