--- a/podcast/index.html
+++ b/podcast/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Semih Yağcıoğlu - Podcast Episodes</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.png" type="image/png">
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <title>Semih Yagcioglu Podcast</title>
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.png" type="image/png">
+    <link href="../style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <img src='profile.jpg' />
             </div>
             <div align="left" style="margin-top:1em; margin-bottom:1em;"><name>Semih Yağcıoğlu</name></div>
-            <a href="index.html">Home</a> | <strong>Podcast Episodes</strong>
+            <a href="index.html">Home</a> | <strong>Semih Yagcioglu Podcast</strong>
         </div>
     </div>
 </header>
