--- a/podcast/index.html
+++ b/podcast/index.html
@@ -17,8 +17,9 @@
             <div class="profile_pic">
                 <img src='profile.jpg' />
             </div>
-            <div align="left" style="margin-top:1em; margin-bottom:1em;"><name>Semih Yağcıoğlu</name></div>
+            <div align="left" style="margin-top:1em; margin-bottom:1em;"><name>Semih Yagcioglu</name></div>
             <a href="index.html">Home</a> | <strong>Semih Yagcioglu Podcast</strong>
+            The Semih Yagcioglu Podcast is a long form conversation about wealth, happiness, philosophy and intelligence hosted by Semih Yagcioglu with friends and guests.
         </div>
     </div>
 </header>
