--- a/podcast/index.html
+++ b/podcast/index.html
@@ -14,9 +14,9 @@
 <header>
     <div class="intro">
         <div id="intro-text">
-            <div class="profile_pic">
+            <!--<div class="profile_pic">
                 <img src='profile.jpg' />
-            </div>
+            </div>-->
             <div align="left" style="margin-top:1em; margin-bottom:1em;"><name>Semih Yagcioglu</name></div>
             <a href="index.html">Home</a> | <strong>Semih Yagcioglu Podcast</strong>
             The Semih Yagcioglu Podcast is a long form conversation about wealth, happiness, philosophy and intelligence hosted by Semih Yagcioglu with friends and guests.
