--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </header>
 <!-- SECTIONS -->
 <div class="sections">
-	I am the Director of AI at Apziva. I have a PhD in Computer Science from Hacettepe University where I focused on multimodal comprehension of how-to instructions, under the supervision of <a href="https://aykuterdem.github.io" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. Previously, I was a Group Lead at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
+	I am the Director of AI at Apziva. I received my PhD in Computer Engineering from Hacettepe University where I focused on multimodal comprehension of how-to instructions. Previously, I was a Group Lead at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
